# perentie

./: .clang-format  .gitignore  .pre-commit-config.yaml  .stylua.toml  LICENSE-THIRDPARTY  LICENSE-redist.txt  README.rst  flake.nix  i586-pc-msdosdjgpp.ini  meson.build  wasm32-emscripten.ini
example/: dosbox.conf  main.lua
example/assets/: tiny.fnt
guide/: book.toml
guide/src/: SUMMARY.md  compiling.md  debugging.md  fonts.md  gettingstarted.md  graphics.md  introduction.md  sound.md  state.md  storage.md
html/: index.html  style.css
scripts/: font_outline_fix.py  lightcube_convert.py  pack.py  room_convert.py  webserver.py
src/: Makefile  bin2c.lua  boot.lua  cbor.lua  colour.c  colour.h  dos.c  dos.h  dos_vga.c  eagle.fnt  em_pre.js  event.c  event.h  font.c  font.h  fs.c  fs.h  fs_shim.h  image.c  image.h  inspect.lua  log.c  log.h  main.c  main.lua  musicrad.c  musicrad.h  pcspeak.c  pcspeak.h  point.h  rect.h  repl.c  repl.h  script.c  script.h  sdl.c  sdl.h  stdio_shim.h  system.c  system.h  (+5 more)
src/doc/: LICENSE  ldoc.css  ldoc.ltp
src/linenois/: linenois.c
src/lua/: LICENSE  lauxlib.c  lauxlib.h  lbaselib.c  ldblib.c  lgc.c  liolib.c  loadlib.c  lobject.c  lstrlib.c  ltests.c  ltests.h  lua.c  lvm.c  onelua.c
src/miniz/: miniz_common.h  miniz_export.h
src/physfs/: physfs_archiver_zip.c  physfs_platform_djgpp.c  physfs_platforms.h
src/simplex/: simplex.c  simplex.h
src/siphash/: halfsip.c  halfsip.h
src/spng/: spng.c  spng.h
src/stb/: stb.c
src/wave/: wave.c
src/woodypc/: pcspeak.c  pcspeak.h
